# Rust_Julia_FFI_Flutter_Template

./: .gitignore  README.md  TECHNICAL_DEBT_REDUCTION_PROGRESS.md
docs/: 80_chars_file_list.txt  80_chars_remaining.txt  AGENT_HANDOFF_MICRO_STEP_MIGRATION_COMPLETE.md  ALGORITHM_PERFORMANCE_BREAKTHROUGH.md  CLIENT_SERVER_ARCHITECTURE_FLOW.md  CODE_STANDARDS.md  COMPREHENSIVE_ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  FINAL_AGENT_HANDOFF_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LINTING_QUICK_REFERENCE.md  MICRO_STEP_MIGRATION_PLAN.md  NEXT_AGENT_HANDOFF_UI_AND_BENCHMARKING.md  NORTH_STAR_ARCHITECTURE_PLAN.md  PERFORMANCE_TESTING_GUIDE.md  PROJECT_DECISION_TIMELINE.md  PROJECT_STATUS_FINAL.md  QUICK_REFERENCE_NEXT_AGENT.md  REFERENCE_MIGRATION_TDD_PLAN.md  SETUP_GUIDE.md  TECHNICAL_DEBT_REDUCTION_MICRO_STEPS.md  TECHNICAL_DEBT_REDUCTION_PHASE_8_IN_PROGRESS.md  TESTING_STRATEGY.md  TEST_STATUS_AND_DECISIONS.md  WORDLE_SOLVER_ARCHITECTURE_ANALYSIS.md  WORD_FILTERING_VALIDATION_COMPLETE.md  WRDLHELPER_COMPLEXITY_FOR_FUTURE_AGENTS.md  WRDLHELPER_IMPLEMENTATION_STATUS.md  WRDLHELPER_REFERENCE_ANALYSIS.md
gemini/: 100_PERCENT_TEST_SUCCESS_ACHIEVEMENT.md  96_PERCENT_TEST_SUITE_SUCCESS_BREAKTHROUGH.md  FINAL_SOLUTION_IMPLEMENTED.md  JuliaRustBridge.jl
my_working_ffi_app/: .gitignore  analysis_options.yaml  build_all.sh  pubspec.yaml  (+2 more)
wrdlHelper/rust/: Cargo.toml
wrdlHelper/rust/src/: benchmark_runner.rs  benchmarking.rs  frb_generated.rs  lib.rs
wrdlHelper/rust/src/api/: constraint_test.rs  debug_test.rs  mod.rs  simple.rs  wrdl_helper.rs  wrdl_helper_reference.rs
(+243 files in other folders)
